--- a/local-server/src/main/assets/home.html
+++ b/local-server/src/main/assets/home.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon'>
-    <link rel="stylesheet" type="text/css" href="JsonTreeBuilder.css" />
+    <link rel="stylesheet" type="text/css" href="app.css" />
 </head>
 <body>
 <h1>Json data</h1>
@@ -13,7 +13,6 @@
 
 </body>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script type="text/javascript" src="JsonTreeBuilder.js"></script>
 <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 <script type="text/javascript" src="app.js"></script>
