now we can send multiple table data

--- a/local-server/src/main/assets/home.html
+++ b/local-server/src/main/assets/home.html
@@ -19,27 +19,9 @@
 
 
 </head>
-<body>
+<body id="body">
 <h1><b>Statistics</b></h1>
-<div id="json"></div>
-<table class="table table-borderless">
-    <thead>
-    <tr>
-        <th scope="col">Audio Stats</th>
-        <th scope="col">Video Stats</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td id="audio_col"></td>
-        <td id ="video_col"></td>
-    </tr>
-    </tbody>
-</table>
-<h1><b>Log Cat</b></h1>
-<div id="log_cat_div" style="overflow:auto" class="table-wrapper-scroll-y my-custom-scrollbar">
 
-</div>
 </body>
 
 <script type="text/javascript" src="app.js"></script>
