added collapse funtionality to table title

--- a/local-server/src/main/assets/home.html
+++ b/local-server/src/main/assets/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Cliq Stastics</title>
     <meta charset="utf-8">
@@ -8,7 +9,7 @@
     <!-- Latest compiled and minified CSS -->
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="app.css" />
 
     <!-- jQuery library -->
@@ -19,8 +20,9 @@
 
 
 </head>
+
 <body id="body">
-<h1><b>Statistics</b></h1>
+    <h1><b>Logging Agent</b></h1>
 
 </body>
 
